# s4u-test-assignment

./: pyproject.toml
src/transfer/: models.py  tasks.py  tests.py  utils.py
src/transfer/migrations/: 0002_scheduledpayment.py  0003_scheduledpayment_original_day.py  0004_auto_20200806_1546.py
