[tool.poetry]
name = "nanobank"
version = "0.1.0"
description = "Grossly oversimplified, bug ridden banking system"
authors = ["Forex4you IT"]

[tool.poetry.dependencies]
python = ">=3.6"
Django = "^3.0.8"
Celery = "^4.4.7"
django-celery-beat = "^2.0.0"
django-celery-results = "^1.2.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
